--- a/labs/N220Final/css/styles.css
+++ b/labs/N220Final/css/styles.css
@@ -13,7 +13,6 @@
     width: 150px;
     height: 60px;
     display:flex;
-    /*flex-direction: column; */
     justify-content: center;
     text-align: center;
     margin-top: -25px;
@@ -57,7 +56,7 @@ h3 {
     padding: 10px;
 }
 
-.column {
+.card {
     width: 225px;
     height: 150px;
     margin: 0 10px;
